k8s-deployment-nodePort.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-webapp
  template:
    metadata:
      labels:
        app: simple-webapp
    spec:
      containers:
      - name: simple-webapp
        image: muraddevops/simple-webapp:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-service
spec:
  selector:
    app: simple-webapp
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001
