k8s-deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-webapp
  template:
    metadata:
      labels:
        app: simple-webapp
    spec:
      containers:
      - name: simple-webapp
        image: muraddevops/simple-webapp:latest
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-service
spec:
  type: ClusterIP
  selector:
    app: simple-webapp
  ports:
    - port: 80
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: simple-webapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-webapp-service
                port:
                  number: 80
